- 
    Bug 
- 
    Resolution: Done
- 
    P4: Low 
- 
    5.12.3
- 
    None
- 
        
- 
        83347e2d39dd967b6889977eddf77a18ff655ccc (qt/qtbase/5.12)
Compile error on OSX
qt-everywhere-src-5.12.3/qtbase/src/plugins/platforms/cocoa/qcocoabackingstore.h:80:69: error:
      only virtual member functions can be marked 'override'
        QPlatformTextureList *textures, bool translucentBackground) override;
Configure command
+ /Users/user/Dev/3rd/downloads/unpacked_sources/qt-everywhere-src-5.12.3/qtbase/configure -top-level -release -no-qml-debug -no-dbus -static -openssl-linked -confirm-license -opensource -no-opengl -qt-pcre -qt-harfbuzz -sql-sqlite -sql-mysql -no-feature-vulkan -I/Users/user/Dev/3rd/release/OpenSSL/include -L/usr/local/opt/mysql@5.7/lib -I/usr/local/opt/mysql@5.7/include -I/usr/local/opt/mysql@5.7/include/mysql -qt-libpng -no-freetype -nomake tests -nomake examples -no-sql-db2 -no-sql-oci -no-sql-tds -no-sql-sqlite2 -no-sql-odbc -no-sql-ibase -no-sql-psql -skip doc -skip webchannel -skip webview -skip sensors -skip serialport -skip script -skip multimedia -skip wayland -skip location -skip webglplugin -skip gamepad -skip purchasing -skip canvas3d -skip speech -skip 3d -skip androidextras -skip canvas3d -skip connectivity -skip virtualkeyboard -skip imageformats -prefix /Users/user/Dev/3rd/release/Qt5
- is duplicated by
- 
                    QTBUG-75848 Static, minimal build of Qt 5.12.3 fails on macOS High Sierra 10.13.6 -           
- Closed
 
-